tests/script_errors/function_already_defined/error.txt
Error: 
      | ^ function a already defined.